# r4l

./: Cargo.toml  README.json  README.md  qemu.dts
drivers/i2c/busses/i2c-designware/: Cargo.toml
drivers/i2c/busses/i2c-designware/src/: lib.rs
drivers/net/phy/ax88796b/: Cargo.toml
drivers/net/phy/ax88796b/src/: lib.rs
drivers/net/phy/mdio/: Cargo.toml  lib.rs
drivers/sample/: Cargo.toml
drivers/sample/minimal/: Cargo.toml
drivers/sample/minimal/src/: lib.rs
drivers/sample/platform/: Cargo.toml
drivers/sample/platform/src/: lib.rs
drivers/sample/src/: lib.rs
macros/: Cargo.toml
macros/src/: helpers.rs  lib.rs  module.rs
r4l/: Cargo.toml
r4l/src/: .prelude.rs.swp  build_error.rs  bus.rs  device.rs  error.rs  init.rs  lib.rs  linked_list.rs  net.rs  prelude.rs  print.rs  str.rs  sync.rs
r4l/src/bus/: manage.rs  mod.rs
r4l/src/driver/: driver.rs  driver_id.rs  mod.rs
r4l/src/irq/: flags.rs  mod.rs  os_api.rs
r4l/src/net/: mod.rs  phy.rs
r4l/src/net/mdio/: mdio.rs  mdio_dev.rs  mod.rs
r4l/src/net/os/: mod.rs
r4l/src/net/os/rust_os/: mod.rs  phy_dev.rs  phy_drv.rs
r4l/src/net/phy/: mod.rs  phy_dev.rs  phy_drv.rs
r4l/src/of/: device_id.rs  irq.rs  mod.rs  platform.rs
r4l/src/platform/: mod.rs  platform_bus.rs  platform_dev.rs  platform_drv.rs
r4l/src/uapi/: .mii.rs.swp  ethtool.rs  mii.rs  mod.rs
