[package]
name = "r4l"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "OS interface abstract layer for r4l"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/r4l.git"

[features]
rust_os=[]
starry=["rust_os", "axerrno", "axtask", "axlog", "axhal", "axsync", "linked_list"]

[dependencies]
bitflags = "2.5.0"
derive_builder = {version ="0.20", default-features = false}
cfg-if = "1.0"

macros = {package ="r4l-macros", path = "../macros"}
of = { git = "https://github.com/Starry-OS/of.git"}

# Arceos Starry dependencies
axerrno = {git = "https://github.com/Starry-OS/axerrno.git", optional=true}
axtask = {git = "https://github.com/Starry-OS/axtask.git", optional=true}
axlog = {git = "https://github.com/Starry-OS/axlog.git", optional=true}
axhal = {git = "https://github.com/Starry-OS/axhal.git", optional=true}
axsync = {git = "https://github.com/Starry-OS/axsync.git", optional=true}
linked_list = {git = "https://github.com/Starry-OS/linked_list.git", optional=true}
