[package]
name = "ax88796b"
version = "0.1.0"
edition = "2021"
authors = ["Linux <guoweikang.kernel@gmail.com>"]
description = "Linux phy rust driver: ax88796b "
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/r4l.git"

[features]
starry=["kernel/starry"]
default =["starry"]
[dependencies]
kernel = { package="r4l", path = "../../../../r4l/"}
